<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/appBar"
        layout="@layout/layout_appbar" />

    <ImageView
        android:id="@+id/imgPerson1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llBoxInputs"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="20dp"
        android:src="@drawable/ic_profile"
        android:backgroundTint="@color/red_transparent"
        android:background="@drawable/shape_circle"/>

    <LinearLayout
        android:id="@+id/llBoxInputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/llBoxLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical"
        android:layout_margin="25dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/username"
            android:textSize="18sp">

            <EditText
                android:id="@+id/inputUsernameLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoComplete"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="18sp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/inputPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBoxLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:elevation="6dp"
        android:orientation="vertical"
        android:padding="50dp"
        android:background="@color/white">

        <Button
            android:id="@+id/btnSendLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/login"
            android:paddingVertical="9dp"
            android:textFontWeight="500"
            android:textSize="18sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>