<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true">

    <include
        android:id="@+id/appBar"
        layout="@layout/layout_appbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/lyButtonFinish"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/shape_rounded">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/keepDistance"
                        android:textColor="@color/textPrimary"
                        android:textFontWeight="600"
                        android:textSize="16dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/keepDistanceDescript"/>
                </LinearLayout>

                <Switch
                    android:id="@+id/swKeepDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/shape_rounded">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deliveryTo"
                    android:textColor="@color/textPrimary"
                    android:textFontWeight="600"
                    android:textSize="16dp"/>

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textSecondary"
                        android:layoutDirection="rtl"
                        android:text="Jl. Jayka kawtang no 4, Nagsem"/>
                    <RadioButton
                        android:id="@+id/radio2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textSecondary"
                        android:layoutDirection="rtl"
                        android:text="Jl. Jayka kawtang no 4, Nagsem"/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="15dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/shape_rounded">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:paddingHorizontal="20dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/myCart"
                        android:layout_weight="1"
                        android:textColor="@color/textPrimary"
                        android:textFontWeight="700"
                        android:textSize="20dp"
                        android:gravity="left|center"/>

                    <TextView
                        android:id="@+id/btnAddPlates"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/addItems"
                        android:textColor="@color/primaryBrand"
                        android:layout_weight="1"
                        android:gravity="right|center"/>
                </LinearLayout>

                <include
                    android:id="@+id/llPlateList"
                    layout="@layout/recycler_plates_shop_card"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>

                <TextView
                    android:id="@+id/tvError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@color/textPrimary"
                    android:visibility="gone"/>

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    app:layout_constraintTop_toBottomOf="@id/clPromosText"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/shape_rounded">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/payment"
                    android:textColor="@color/textPrimary"
                    android:textFontWeight="700"
                    android:textSize="20dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        android:layout_marginTop="8dp">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:textColor="@color/textPrimary"
                            android:text="Total de Items"/>
                        <TextView
                            android:id="@+id/tvItemTotalPrice"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:textAlignment="textEnd"
                            android:textFontWeight="700"
                            android:textColor="@color/textPrimary"
                            tools:text="$ 30.00"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        android:layout_marginTop="8dp">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:textColor="@color/textPrimary"
                            android:text="Delivery Free"/>
                        <TextView
                            android:id="@+id/tvDeliveryPrice"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:textAlignment="textEnd"
                            android:textFontWeight="700"
                            android:textColor="@color/textPrimary"
                            android:text="$ 0.00"/>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="4dp"
                        android:background="@color/textTertiary"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        android:layout_marginTop="8dp">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:textColor="@color/textPrimary"
                            android:text="A Pagar"/>
                        <TextView
                            android:id="@+id/tvFinalPrice"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:textAlignment="textEnd"
                            android:textFontWeight="700"
                            android:textColor="@color/primaryBrand"
                            tools:text="$ 30.00"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/lyButtonFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clBtnCheckout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/shape_rounded"
            android:backgroundTint="@color/primaryBrand"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp">

            <TextView
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buyFinished"
                android:textColor="@color/white"
                android:textFontWeight="700"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tvTotalPrice"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                tools:text="30p" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>